--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "@chakra-ui/react": "^2.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.12.16",
-    "cropperjs": "^2.0.0"
+    "framer-motion": "^10.12.16"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
